--- a/styles.css
+++ b/styles.css
@@ -184,3 +184,12 @@ button:hover {
     background-color: #25f500; /* Efecto hover */
     transform: scale(1.1);
 }
+#bulkResizeBtn {
+    transition: all 0.3s ease; /* Suavizar transición */
+}
+
+#bulkResizeBtn:hover {
+    background-color: #4CAF50; /* Cambia el color de fondo */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Agrega sombra */
+    transform: scale(1.01); /* Incrementa ligeramente el tamaño */
+}
